<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".FragmentHalamanPortofolio"
        android:orientation="vertical"
        android:padding="16dp">

        <!-- TODO: Update blank fragment layout -->
        <TextView
            android:id="@+id/tv_pf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_pf"
            android:textSize="30sp"
            android:layout_gravity="center"
            android:layout_marginBottom="16dp"/>

        <ImageView
            android:id="@+id/img_2"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@drawable/resta"
            android:scaleType="centerCrop"
            android:layout_gravity="center"
            android:layout_marginBottom="16dp"/>

        <TextView
            android:id="@+id/tv_ae"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_ae"
            android:textSize="20sp"
            android:layout_marginBottom="8dp"/>

        <TextView
            android:id="@+id/tv_17"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_17"
            android:textSize="20sp"
            android:layout_marginBottom="8dp"/>

        <TextView
            android:id="@+id/tv_alamat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_alamat"
            android:textSize="20sp"
            android:layout_marginBottom="8dp"/>

        <TextView
            android:id="@+id/tv_pendidikan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/tv_pendidikan"/>

        <TextView
            android:id="@+id/tv_sdn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_sdn"
            android:textSize="20sp"
            android:layout_marginBottom="4dp"/>

        <TextView
            android:id="@+id/tv_smp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_smp"
            android:textSize="20sp"
            android:layout_marginBottom="4dp"/>

        <TextView
            android:id="@+id/tv_smk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_smk"
            android:textSize="20sp"
            android:layout_marginBottom="16dp"/>

        <TextView
            android:id="@+id/tv_deskripsi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_deskripsi"
            android:textSize="20sp"
            android:layout_marginBottom="16dp"/>

        <Button
            android:id="@+id/btn_lihat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_lihat"
            android:onClick="onClickLihatDetail"
            android:layout_gravity="center"/>

    </LinearLayout>
</layout>