<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".FragmentHalamanDiklat"
        android:orientation="vertical"
        android:padding="16dp">

        <!-- TODO: Update blank fragment layout -->

        <TextView
            android:id="@+id/tv_diklat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_diklat"
            android:textSize="25sp"
            android:textStyle="bold"
            android:layout_marginTop="16dp"/>

        <TextView
            android:id="@+id/tv_nama"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_nama"
            android:textSize="20sp"
            android:layout_marginTop="8dp"/>

        <TextView
            android:id="@+id/tv_tanggal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_tanggal"
            android:textSize="20sp"
            android:layout_marginTop="8dp"/>

        <TextView
            android:id="@+id/tv_kesan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_kesan"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginTop="16dp"/>

        <TextView
            android:id="@+id/tv_lainnya"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_lainnya"
            android:textSize="20sp"
            android:layout_marginTop="8dp"/>

        <Button
            android:id="@+id/btn_mbalek"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_mbalek"
            android:layout_marginTop="16dp"
            android:onClick="onLihatDetailClick"/>

    </LinearLayout>
</layout>