<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="16dp"
        tools:context="FragmentDashboard">

        <!-- TODO: Update blank fragment layout -->
        <EditText
            android:id="@+id/edt_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edt_1"
            android:textSize="30sp"
            android:layout_gravity="center"
            android:layout_marginBottom="50dp"/>

        <TextView
            android:id="@+id/tv_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_1"
            android:textSize="30sp"
            android:layout_gravity="center"
            android:layout_marginBottom="30dp" />

        <Button
            android:id="@+id/btn_profil"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_profil"
            android:layout_gravity="center"
            android:textSize="20sp"
            android:layout_marginBottom="16dp" />

        <Button
            android:id="@+id/btn_portofolio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_portofolio"
            android:layout_gravity="center"
            android:textSize="20sp"
            android:layout_marginBottom="16dp" />

        <Button
            android:id="@+id/btn_diklat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_diklat"
            android:layout_gravity="center"
            android:textSize="20sp"
            android:layout_marginBottom="16dp" />

    </LinearLayout>
</layout>